fix sizing on small screens

--- a/src/components/nav/nav.styl
+++ b/src/components/nav/nav.styl
@@ -35,7 +35,10 @@
     margin-top: 9px
     
     +media('sm-height')
-      width: 140px
+      width: 128px
+      
+    +media('xs')
+      width: 100px
 
 .title sup
   position: relative
@@ -93,7 +96,7 @@ p
           max-width: 200px
 
         +media('xs')
-          max-width: 132px !important
+          max-width: 100px !important
 
       .symbol
         display: inline-block
